// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs correctly applies the theme context className 1`] = `
<ThemeContextProvider
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <Tabs
    fill={false}
    tabFill={false}
    variant="modular-left-aligned"
  >
    <ContentContainer
      className="tabs-container structural orion-fusion-theme"
      fill={false}
      header={
        <ResponsiveElement
          onChange={[Function]}
          responsiveTo="parent"
        >
          <CollapsedTabs
            activeIndex={0}
            activeKey="default"
            onTruncationChange={[Function]}
          >
            <TabPane
              className="is-active"
              index={0}
              isActive={true}
              isDisabled={false}
              isIconOnly={false}
              label="Default"
              onClick={[Function]}
              showIcon={false}
            />
          </CollapsedTabs>
        </ResponsiveElement>
      }
      setFocusOnContainer={false}
      variant="modular-left-aligned"
    >
      <div
        className="workspace"
        role="none"
      >
        <div
          aria-hidden={true}
          className="body-shadow-container"
        >
          <div
            className="body-shadow"
          />
        </div>
        <div
          className="tab-header"
          role="none"
        >
          <Tabs
            ariaLabel="workspace"
            tabData={
              Array [
                Object {
                  "associatedPanelId": "terra-common-tabs-default-panel",
                  "customDisplay": undefined,
                  "icon": undefined,
                  "id": "terra-common-tabs-default",
                  "isDisabled": false,
                  "isIconOnly": false,
                  "isSelected": true,
                  "itemKey": "default",
                  "label": "Default",
                  "metaData": undefined,
                  "onSelect": [Function],
                },
              ]
            }
            variant="modular-left-aligned"
          >
            <div
              aria-label="workspace"
              aria-orientation="horizontal"
              aria-owns=""
              className="tab-container orion-fusion-theme"
              data-tab-is-calculating="true"
              role="tablist"
            >
              <Tab
                associatedPanelId="terra-common-tabs-default-panel"
                id="terra-common-tabs-default"
                index={0}
                isDisabled={false}
                isIconOnly={false}
                isSelected={true}
                itemKey="default"
                key="terra-common-tabs-default"
                label="Default"
                onSelect={[Function]}
                showIcon={false}
                tabIds={
                  Array [
                    "terra-common-tabs-default",
                  ]
                }
                variant="modular-left-aligned"
                zIndex={1}
              >
                <div
                  aria-controls="terra-common-tabs-default-panel"
                  aria-selected={true}
                  className="tab is-active is-text-only orion-fusion-theme"
                  data-focus-styles-enabled={true}
                  data-terra-tabs-show-focus-styles={true}
                  id="terra-common-tabs-default"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  role="tab"
                  style={
                    Object {
                      "zIndex": 1,
                    }
                  }
                  tabIndex={0}
                  title="Default"
                >
                  <div
                    className="inner"
                  >
                    <span
                      className="label"
                    >
                      Default
                    </span>
                  </div>
                </div>
              </Tab>
              <OnClickOutside(TabDropDown)
                eventTypes={
                  Array [
                    "mousedown",
                    "touchstart",
                  ]
                }
                excludeScrollbar={false}
                isOpen={false}
                onBlur={[Function]}
                onFocus={[Function]}
                onRequestClose={[Function]}
                outsideClickIgnoreClass="ignore-react-onclickoutside"
                preventDefault={false}
                refCallback={[Function]}
                stopPropagation={false}
              >
                <TabDropDown
                  disableOnClickOutside={[Function]}
                  enableOnClickOutside={[Function]}
                  eventTypes={
                    Array [
                      "mousedown",
                      "touchstart",
                    ]
                  }
                  isOpen={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onRequestClose={[Function]}
                  outsideClickIgnoreClass="ignore-react-onclickoutside"
                  preventDefault={false}
                  refCallback={[Function]}
                  stopPropagation={false}
                  wrappedRef={[Function]}
                >
                  <div
                    className="drop-down orion-fusion-theme"
                    onMouseDown={[Function]}
                    role="none"
                  />
                </TabDropDown>
              </OnClickOutside(TabDropDown)>
            </div>
          </Tabs>
        </div>
        <div
          className="body"
          role="none"
        >
          <Scroll
            className="normalizer orion-fusion-theme"
          >
            <div
              className="scroll normalizer orion-fusion-theme"
            >
              <div
                role="none"
                style="position: relative; height: 100%; width: 100%;"
              />
            }
            render={[Function]}
          >
            <Portal
              containerInfo={
                <div
                  role="none"
                  style="position: relative; height: 100%; width: 100%;"
                />
              }
            />
          </CommonTabItem>
        </div>
      </div>
    </CommonTabs>
  </Tabs>
</ThemeContextProvider>
`;

exports[`Tabs Responsiveness should render tabs that are responsive to the parent node viewport by default 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      onChange={[Function]}
      responsiveTo="parent"
    >
      <CollapsibleTabs
        activeIndex={0}
        activeKey="default"
        onChange={[Function]}
        onTruncationChange={[Function]}
        variant="structural"
      >
        <TabPane
          className="is-active"
          index={0}
          isActive={true}
          isDisabled={false}
          isIconOnly={false}
          label="Default"
          onClick={[Function]}
          showIcon={false}
        />
      </CollapsibleTabs>
    </ResponsiveElement>
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs Responsiveness should render tabs that are responsive to the window viewport 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      onChange={[Function]}
      responsiveTo="window"
    >
      <CollapsibleTabs
        activeIndex={0}
        activeKey="default"
        onChange={[Function]}
        onTruncationChange={[Function]}
        variant="structural"
      >
        <TabPane
          className="is-active"
          index={0}
          isActive={true}
          isDisabled={false}
          isIconOnly={false}
          label="Default"
          onClick={[Function]}
          showIcon={false}
        />
      </CollapsibleTabs>
    </ResponsiveElement>
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
>
  <div
    className="tab-header"
    role="none"
  >
    <Tabs
      ariaLabel="workspace"
      onChange={[Function]}
      onTruncationChange={[Function]}
      variant="structural"
    >
      <TabPane
        className="is-active"
        index={0}
        isActive={true}
        isDisabled={false}
        isIconOnly={false}
        label="Default"
        onClick={[Function]}
        showIcon={false}
      />
    </CollapsibleTabs>
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
>
  <div
    className="body"
    role="none"
  >
    <CommonTabItem
      associatedPanelId="terra-common-tabs-default-panel"
      id="terra-common-tabs-default"
      isActive={false}
      isDisabled={false}
      isIconOnly={false}
      itemKey="default"
      key="default/.0"
      label="Default"
      portalElement={
        <div
          role="none"
          style="position: relative; height: 100%; width: 100%;"
        />
      </CollapsibleTabs>
    </ResponsiveElement>
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
  variant="modular-centered"
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs Variants should render modular-left-aligned tabs 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      onChange={[Function]}
      responsiveTo="parent"
    >
      <CollapsedTabs
        activeIndex={0}
        activeKey="default"
        onTruncationChange={[Function]}
      >
        <TabPane
          className="is-active"
          index={0}
          isActive={true}
          isDisabled={false}
          isIconOnly={false}
          label="Default"
          onClick={[Function]}
          showIcon={false}
        />
      </CollapsedTabs>
    </ResponsiveElement>
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
  variant="modular-left-aligned"
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs Variants should render structural tabs 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      onChange={[Function]}
      responsiveTo="parent"
    >
      <CollapsedTabs
        activeIndex={0}
        activeKey="default"
        onTruncationChange={[Function]}
      >
        <TabPane
          className="is-active"
          index={0}
          isActive={true}
          isDisabled={false}
          isIconOnly={false}
          label="Default"
          onClick={[Function]}
          showIcon={false}
        />
      </CollapsedTabs>
    </ResponsiveElement>
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
  variant="structural"
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs should render a controlled component when onChange and activeKey are set 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      onChange={[Function]}
      responsiveTo="parent"
    >
      <CollapsibleTabs
        activeIndex={0}
        activeKey="default"
        onChange={[Function]}
        onTruncationChange={[Function]}
        variant="structural"
      >
        <TabPane
          className="is-active"
          index={0}
          isActive={true}
          isDisabled={false}
          isIconOnly={false}
          label="Default"
          onClick={[Function]}
          showIcon={false}
        />
      </CollapsibleTabs>
    </ResponsiveElement>
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
>
  <div
    className="body"
    role="none"
  >
    <CommonTabItem
      associatedPanelId="terra-common-tabs-default-panel"
      id="terra-common-tabs-default"
      isActive={true}
      isDisabled={false}
      isIconOnly={false}
      itemKey="default"
      key="default/.0"
      label="Default"
      portalElement={
        <div
          role="none"
          style="position: relative; height: 100%; width: 100%;"
        />
      </CollapsibleTabs>
    </ResponsiveElement>
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
>
  <div
    className="pane-content"
    role="tabpanel"
  />
</ContentContainer>
`;

exports[`Tabs should render an id based on the Tabs id and the Tab key 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      onChange={[Function]}
      responsiveTo="parent"
    >
      <CollapsedTabs
        activeIndex={0}
        activeKey="default"
        onTruncationChange={[Function]}
      >
        <TabPane
          className="is-active customClass"
          index={0}
          isActive={true}
          isDisabled={false}
          isIconOnly={false}
          label="Default"
          onClick={[Function]}
          showIcon={false}
        />
      </CollapsedTabs>
    </ResponsiveElement>
  }
  id="application-id"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
>
  <div
    aria-hidden={true}
    className="body-shadow-container"
  >
    <div
      className="body-shadow"
    />
  </div>
  <div
    className="tab-header"
    role="none"
  >
    <Tabs
      ariaLabel="workspace"
      tabData={
        Array [
          Object {
            "associatedPanelId": "application-id-default-panel",
            "customDisplay": undefined,
            "icon": undefined,
            "id": "application-id-default",
            "isDisabled": false,
            "isIconOnly": false,
            "isSelected": true,
            "itemKey": "default",
            "label": "Default",
            "metaData": undefined,
            "onSelect": [Function],
          },
        ]
      }
      variant="framework"
    />
  </div>
  <div
    className="body"
    role="none"
  >
    <CommonTabItem
      associatedPanelId="application-id-default-panel"
      id="application-id-default"
      isActive={true}
      isDisabled={false}
      isIconOnly={false}
      itemKey="default"
      key="default/.0"
      label="Default"
      portalElement={
        <div
          role="none"
          style="position: relative; height: 100%; width: 100%;"
        />
      }
      render={[Function]}
    />
  </div>
</div>
`;

exports[`Tabs should render an uncontrolled component when defaultActiveKey is set 1`] = `
<ContentContainer
  className="tabs-container structural"
  defaultKey="default"
  fill={false}
  header={
    <ResponsiveElement
      onChange={[Function]}
      responsiveTo="parent"
    >
      <CollapsedTabs
        activeIndex={0}
        activeKey="default"
        onTruncationChange={[Function]}
      >
        <TabPane
          className="is-active"
          index={0}
          isActive={true}
          isDisabled={false}
          isIconOnly={false}
          label="Default"
          onClick={[Function]}
          showIcon={false}
        />
      </CollapsedTabs>
    </ResponsiveElement>
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
>
  <div
    aria-hidden={true}
    className="body-shadow-container"
  >
    <div
      className="body-shadow"
    />
  </div>
  <div
    className="tab-header"
    role="none"
  >
    <Tabs
      ariaLabel="workspace"
      tabData={
        Array [
          Object {
            "associatedPanelId": "terra-common-tabs-default-panel",
            "customDisplay": undefined,
            "icon": undefined,
            "id": "terra-common-tabs-default",
            "isDisabled": false,
            "isIconOnly": false,
            "isSelected": true,
            "itemKey": "default",
            "label": "Default",
            "metaData": undefined,
            "onSelect": [Function],
          },
        ]
      }
      variant="framework"
    />
  </div>
  <div
    className="body"
    role="none"
  >
    <CommonTabItem
      associatedPanelId="terra-common-tabs-default-panel"
      id="terra-common-tabs-default"
      isActive={true}
      isDisabled={false}
      isIconOnly={false}
      itemKey="default"
      key="default/.0"
      label="Default"
      portalElement={
        <div
          role="none"
          style="position: relative; height: 100%; width: 100%;"
        />
      }
      render={[Function]}
    />
  </div>
</div>
`;

exports[`Tabs should render with content filled when indicated 1`] = `
<CommonTabs
  activeItemKey="default"
  id="terra-common-tabs"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
>
  <CommonTabItem
    isDisabled={false}
    isIconOnly={false}
    itemKey="default"
    label="Default"
    render={[Function]}
  />
</CommonTabs>
`;

exports[`Tabs should render with tabs filled when indicated 1`] = `
<CommonTabs
  activeItemKey="default"
  id="terra-common-tabs"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
  tabsFill={true}
>
  <CommonTabItem
    isDisabled={false}
    isIconOnly={false}
    itemKey="default"
    label="Default"
    render={[Function]}
  />
</CommonTabs>
`;

exports[`Tabs should set custom props 1`] = `
<CommonTabs
  activeItemKey="default"
  className="customClass"
  id="terra-common-tabs"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
>
  <CommonTabItem
    isDisabled={false}
    isIconOnly={false}
    itemKey="default"
    label="Default"
    render={[Function]}
  />
</CommonTabs>
`;

exports[`Tabs should set custom props for child Tab Pane 1`] = `
<ContentContainer
  className="tabs-container structural"
  fill={false}
  header={
    <ResponsiveElement
      onChange={[Function]}
      responsiveTo="parent"
    >
      <CollapsedTabs
        activeIndex={0}
        activeKey="default"
        onTruncationChange={[Function]}
      >
        <TabPane
          className="is-active customClass"
          index={0}
          isActive={true}
          isDisabled={false}
          isIconOnly={false}
          label="Default"
          onClick={[Function]}
          showIcon={false}
        />
      </CollapsedTabs>
    </ResponsiveElement>
  }
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  setFocusOnContainer={false}
>
  <div
    aria-hidden={true}
    className="body-shadow-container"
  >
    <div
      className="body-shadow"
    />
  </div>
  <div
    className="tab-header"
    role="none"
  >
    <Tabs
      ariaLabel="workspace"
      tabData={
        Array [
          Object {
            "associatedPanelId": "terra-common-tabs-default-panel",
            "customDisplay": undefined,
            "icon": undefined,
            "id": "terra-common-tabs-default",
            "isDisabled": false,
            "isIconOnly": false,
            "isSelected": true,
            "itemKey": "default",
            "label": "Default",
            "metaData": undefined,
            "onSelect": [Function],
          },
        ]
      }
      variant="framework"
    />
  </div>
  <div
    className="body"
    role="none"
  >
    <CommonTabItem
      associatedPanelId="terra-common-tabs-default-panel"
      id="terra-common-tabs-default"
      isActive={true}
      isDisabled={false}
      isIconOnly={false}
      itemKey="default"
      key="default/.0"
      label="Default"
      portalElement={
        <div
          role="none"
          style="position: relative; height: 100%; width: 100%;"
        />
      }
      render={[Function]}
    />
  </div>
</div>
`;
